--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "AnyDLBot",
+  "name": "TG URL Uploader",
   "description": "Telegram's best Open Source ALL-In-One Multi Purpose RoBot. Create your Fork now.",
   "keywords": [
     "telegram",
@@ -18,15 +18,15 @@
   "website": "https://github.com/SpEcHiDe/AnyDLBot",
   "repository": "https://github.com/SpEcHiDe/AnyDLBot",
   "env": {
-    "ENV": {
-      "description": "Setting this to ANYTHING will enable VARs when in ENV mode",
+    "WEBHOOK": {
+      "description": "Setting this to ANYTHING will enable webhooks when in env mode",
       "value": "ANYTHING"
     },
     "TG_BOT_TOKEN": {
       "description": "Your bot token, as a string.",
       "value": ""
     },
-     "CHAT_BASE_TOKEN": {
+    "CHAT_BASE_TOKEN": {
       "description": "Your chat base token, as a string.",
       "value": ""
     },
@@ -42,8 +42,14 @@
       "description": "allow only pre-defined users to use this bot",
       "value": "7351948 20516707 23122162 500346573"
     },
+    "BANNED_USERS": {
+      "description": "Banned Unwanted members..",
+      "value": "",
+      "required": false
+    },
     "DEF_THUMB_NAIL_VID_S": {
       "description": "default thumbnail to be used in the videos. Incase, youtube-dl is unable to find a thumbnail.",
+      "value": "",
       "required": false
     },
     "CHUNK_SIZE": {
@@ -53,14 +59,7 @@
     },
     "HTTP_PROXY": {
       "description": "proxy for accessing youtube-dl in GeoRestricted Areas. Get your own proxy from https://github.com/rg3/youtube-dl/issues/1091#issuecomment-230163061",
-      "required": false
-    },
-    "FINISHED_PROGRESS_STR": {
-      "description": "should be a single character.",
-      "required": false
-    },
-    "UN_FINISHED_PROGRESS_STR": {
-      "description": "should be a single character.",
+      "value": "",
       "required": false
     }
   },
@@ -69,7 +68,7 @@
   "buildpacks": [{
     "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
   }, {
-   "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
+    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
   }, {
     "url": "heroku/python"
   }],
